// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms|buttons//input/button default 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <input
      class="button"
      type="button"
      value="button default"
    />
  </section>
</section>
`;

exports[`Storyshots Atoms|buttons//input/button primary 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <input
      class="button button--primary"
      type="button"
      value="button primary"
    />
  </section>
</section>
`;

exports[`Storyshots Atoms|buttons//input/button secondary 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <input
      class="button button--secondary"
      type="button"
      value="button secondary"
    />
  </section>
</section>
`;

exports[`Storyshots Atoms|buttons//input/submit default 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <input
      class="button"
      type="submit"
      value="button default"
    />
  </section>
</section>
`;

exports[`Storyshots Atoms|buttons//input/submit primary 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <input
      class="button button--primary"
      type="submit"
      value="button primary"
    />
  </section>
</section>
`;

exports[`Storyshots Atoms|buttons//input/submit secondary 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <input
      class="button button--secondary"
      type="submit"
      value="button secondary"
    />
  </section>
</section>
`;

exports[`Storyshots Atoms|buttons/anchor default 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <a
      class="button"
    >
      anchor button default
    </a>
  </section>
</section>
`;

exports[`Storyshots Atoms|buttons/anchor primary 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <a
      class="button button--primary"
    >
      anchor button primary
    </a>
  </section>
</section>
`;

exports[`Storyshots Atoms|buttons/anchor secondary 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <a
      class="button button--secondary"
    >
      anchor button secondary
    </a>
  </section>
</section>
`;

exports[`Storyshots Atoms|buttons/button default 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <button
      class="button"
    >
      button default
    </button>
  </section>
</section>
`;

exports[`Storyshots Atoms|buttons/button primary 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <button
      class="button button--primary"
    >
      button primary
    </button>
  </section>
</section>
`;

exports[`Storyshots Atoms|buttons/button secondary 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <button
      class="button button--secondary"
    >
      button secondary
    </button>
  </section>
</section>
`;

exports[`Storyshots Atoms|text/copy/aside default 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <aside
      class=""
    >
      Aside default, a pharetra augue. Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam.
    </aside>
  </section>
</section>
`;

exports[`Storyshots Atoms|text/copy/aside intro 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <aside
      class="copy--intro"
    >
      Aside copy--intro, a pharetra augue. Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam.
    </aside>
  </section>
</section>
`;

exports[`Storyshots Atoms|text/copy/aside small 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <aside
      class="copy--small"
    >
      Aside copy--small, a pharetra augue. Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam.
    </aside>
  </section>
</section>
`;

exports[`Storyshots Atoms|text/copy/paragraph default 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <p
      class=""
    >
      Paragraph default, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Donec sed odio dui. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer posuere erat a ante venenatis dapibus posuere velit aliquet.
    </p>
  </section>
</section>
`;

exports[`Storyshots Atoms|text/copy/paragraph intro 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <p
      class="copy--intro"
    >
      Paragraph copy--intro, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Donec sed odio dui. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer posuere erat a ante venenatis dapibus posuere velit aliquet.
    </p>
  </section>
</section>
`;

exports[`Storyshots Atoms|text/copy/paragraph small 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <p
      class="copy--small"
    >
      Paragraph copy--small, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Donec sed odio dui. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer posuere erat a ante venenatis dapibus posuere velit aliquet.
    </p>
  </section>
</section>
`;

exports[`Storyshots Atoms|text/copy/quote default 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <q
      class=""
    >
      Quote default ipsum dolor sit amet, consectetur adipisicing elit.
    </q>
  </section>
</section>
`;

exports[`Storyshots Atoms|text/copy/quote intro 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <q
      class="copy--intro"
    >
      Quote copy--intro ipsum dolor sit amet, consectetur adipisicing elit.
    </q>
  </section>
</section>
`;

exports[`Storyshots Atoms|text/copy/quote small 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <q
      class="copy--small"
    >
      Quote copy--small ipsum dolor sit amet, consectetur adipisicing elit.
    </q>
  </section>
</section>
`;

exports[`Storyshots Atoms|text/copy/small default 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <small
      class=""
    >
      Small default amet ridiculus ornare
    </small>
  </section>
</section>
`;

exports[`Storyshots Atoms|text/copy/small intro 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <small
      class="copy--intro"
    >
      Small copy--intro amet ridiculus ornare
    </small>
  </section>
</section>
`;

exports[`Storyshots Atoms|text/copy/small small 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <small
      class="copy--small"
    >
      Small copy--small amet ridiculus ornare
    </small>
  </section>
</section>
`;

exports[`Storyshots Atoms|text/headings h1 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <h1>
      A Page Title
    </h1>
  </section>
</section>
`;

exports[`Storyshots Atoms|text/headings h2 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <h2>
      A Title for an Organism
    </h2>
  </section>
</section>
`;

exports[`Storyshots Atoms|text/headings h3 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <h3>
      A Title for a Molecule within an organism
    </h3>
  </section>
</section>
`;

exports[`Storyshots Atoms|text/headings h4 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <h4>
      A title within a paragraph of normal copy
    </h4>
  </section>
</section>
`;

exports[`Storyshots Atoms|text/headings h5 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <h5>
      A title within a paragraph of small copy (e.g. image captions)
    </h5>
  </section>
</section>
`;

exports[`Storyshots Atoms|text/headings h6 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <h6>
      A title with the smallest appearance on the deepest level (e.g. legal in footer)
    </h6>
  </section>
</section>
`;

exports[`Storyshots Molecules|auto-complete default 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <div
      aria-expanded="true"
      aria-haspopup="listbox"
      aria-owns="autocomplete-story__dropdown"
      class="auto-complete"
      role="combobox"
    >
      <input
        aria-autocomplete="list"
        aria-controls="autocomplete-story__dropdown"
        autocomplete="off"
        autofocus="autofocus"
        class="auto-complete__input"
        id="autocomplete-story"
        type="text"
      />
       
      <div
        class="auto-complete__dropdown"
        id="autocomplete-story__dropdown"
        role="listbox"
      >
        <h4
          class="auto-complete__label"
          id="storedLabel"
        >
          
                Last used
            
        </h4>
         
        <ul
          aria-labelledby="storedLabel"
          class="auto-complete__list"
        >
          <li
            class="auto-complete__list-item"
            role="option"
            tabindex="0"
          >
            
                    Stored item 1
                
          </li>
          <li
            class="auto-complete__list-item"
            role="option"
            tabindex="0"
          >
            
                    Stored item 2: Type it.. in input to see other items
                
          </li>
        </ul>
         
        <!---->
      </div>
    </div>
  </section>
</section>
`;

exports[`Storyshots Molecules|buttons/content-toggle default 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <a
      class="toggle toggle--icon"
      role="button"
      tabindex="0"
    >
      <!---->
       
      <span>
        More
      </span>
    </a>
  </section>
</section>
`;

exports[`Storyshots Molecules|buttons/icon-button default 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <a
      aria-label="icon button default"
      class="icon-button"
      role="button"
      tabindex="0"
    >
      <!---->
       
      <span
        class="icon-button__label"
      >
        icon button default
      </span>
    </a>
  </section>
</section>
`;

exports[`Storyshots Molecules|buttons/icon-button defaultNoSlot 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <a
      aria-label="icon button default, no slot"
      class="icon-button"
      role="button"
      tabindex="0"
    >
      <!---->
       
      <!---->
    </a>
  </section>
</section>
`;

exports[`Storyshots Molecules|buttons/icon-button large 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <a
      aria-label="icon button large"
      class="icon-button icon-button--large"
      role="button"
      tabindex="0"
    >
      <!---->
       
      <span
        class="icon-button__label"
      >
        icon button large
      </span>
    </a>
  </section>
</section>
`;

exports[`Storyshots Molecules|buttons/icon-button largeNoSlot 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <a
      aria-label="icon button large, no slot"
      class="icon-button icon-button--large"
      role="button"
      tabindex="0"
    >
      <!---->
       
      <!---->
    </a>
  </section>
</section>
`;

exports[`Storyshots Molecules|buttons/icon-button small 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <a
      aria-label="icon button small"
      class="icon-button icon-button--small"
      role="button"
      tabindex="0"
    >
      <!---->
       
      <span
        class="icon-button__label"
      >
        icon button small
      </span>
    </a>
  </section>
</section>
`;

exports[`Storyshots Molecules|buttons/icon-button smallNoSlot 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <a
      aria-label="icon button small, no slot"
      class="icon-button icon-button--small"
      role="button"
      tabindex="0"
    >
      <!---->
       
      <!---->
    </a>
  </section>
</section>
`;

exports[`Storyshots Molecules|buttons/icon-button underline 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <a
      aria-label="icon button underline-large"
      class="icon-button icon-button--underline-large"
      role="button"
      tabindex="0"
    >
      <!---->
       
      <span
        class="icon-button__label"
      >
        icon button underline
      </span>
    </a>
  </section>
</section>
`;

exports[`Storyshots Molecules|buttons/icon-button underlineNoSlot 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <a
      aria-label="icon button underline-large, no slot"
      class="icon-button icon-button--underline-large"
      role="button"
      tabindex="0"
    >
      <!---->
       
      <!---->
    </a>
  </section>
</section>
`;

exports[`Storyshots Molecules|cards/brand-card default 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <section
      class="story__molecule"
    >
      <div
        class="brand-card"
      >
        <div
          class="brand-card__image-wrapper"
        >
          <picture>
            <!---->
             
            <!---->
             
            <source
              media="(min-width: 768px)"
              srcset=""
            />
             
            <!---->
             
            <!---->
             
            <source
              media="(max-width: 480px)"
              srcset="/generator/svg/400/400"
            />
             
            <img
              alt=""
              class="img--responsive img--lazy"
              src=""
            />
          </picture>
        </div>
         
        <q
          class="brand-card__quote"
        >
          Maecenas sed diam eget risus varius blandit sit amet non magna. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.
        </q>
      </div>
    </section>
  </section>
</section>
`;

exports[`Storyshots Molecules|cards/business-card default 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <section
      class="story__molecule"
    >
      <a
        class="business-card"
        href="https://ultimaker.com"
        rel="noopener"
        tabindex="0"
        target="_blank"
        type="BusinessCard"
      >
        <div
          class="business-card__header"
        >
          <div
            class="business-card__image-wrapper"
          >
            <picture>
              <!---->
               
              <source
                media="(min-width: 1025px)"
                srcset=""
              />
               
              <!---->
               
              <!---->
               
              <!---->
               
              <source
                media="(max-width: 480px)"
                srcset="/generator/svg/120/120"
              />
               
              <img
                alt=""
                class="img--responsive img--lazy"
                src=""
              />
            </picture>
          </div>
           
          <div
            class="business-card__description"
          >
            <h4
              class="business-card__title"
            >
              
                Ultimaker
            
            </h4>
             
            <p
              class="business-card__property"
            >
              
                5 Showrooms
            
            </p>
          </div>
        </div>
         
        <div
          class="business-card__footer"
        >
          <span
            class="link faux-content-link business-card__link"
          >
            <span
              class="link__underline"
            >
              
                Visit website
            
            </span>
          </span>
        </div>
      </a>
    </section>
  </section>
</section>
`;

exports[`Storyshots Molecules|cards/business-card makerPoint 1`] = `
<section
  class="story"
>
  <section
    class="story"
  >
    <section
      class="story__molecule"
    >
      <a
        class="business-card"
        href="https://www.makerpoint.nl/en/3d-printing/3d-printers/ultimaker/"
        rel="noopener"
        tabindex="0"
        target="_blank"
        type="BusinessCard"
      >
        <div
          class="business-card__header"
        >
          <div
            class="business-card__image-wrapper"
          >
            <picture>
              <!---->
               
              <source
                media="(min-width: 1025px)"
                srcset=""
              />
               
              <!---->
               
              <!---->
               
              <!---->
               
              <source
                media="(max-width: 480px)"
                srcset="https://storage.googleapis.com/ultimaker.com/resellerlogos/_60x60_fit_center-center_100_none/MakerPoint-square-ultimaker-online-purchase.png"
              />
               
              <img
                alt=""
                class="img--responsive img--lazy"
                src=""
              />
            </picture>
          </div>
           
          <div
            class="business-card__description"
          >
            <h4
              class="business-card__title"
            >
              
                Ultimaker
            
            </h4>
             
            <p
              class="business-card__property"
            >
              
                5 Showrooms
            
            </p>
          </div>
        </div>
         
        <div
          class="business-card__footer"
        >
          <span
            class="link faux-content-link business-card__link"
          >
            <span
              class="link__underline"
            >
              
                Visit website
            
            </span>
          </span>
        </div>
      </a>
    </section>
  </section>
</section>
`;
